// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Throughline render goldens > Generate-Unit button is disabled in a live class session (hard block) 1`] = `
{
  "buttons": 11,
  "inputs": 1,
  "lengthBucket": 26,
  "sha": "826f84a744adae82",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > Generate-Unit capability wired → toolbar shows the ✨ button 1`] = `
{
  "buttons": 11,
  "inputs": 1,
  "lengthBucket": 26,
  "sha": "671ab8ca21d5996a",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > host-wired empty (history + currentLesson + onOpenLesson) 1`] = `
{
  "buttons": 10,
  "inputs": 1,
  "lengthBucket": 25,
  "sha": "9556ef4228c0a4d4",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > manual mode (5 props, empty) — empty state + manual-import hint 1`] = `
{
  "buttons": 9,
  "inputs": 1,
  "lengthBucket": 23,
  "sha": "c7c0962398355902",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > populated unit (seeded localStorage + matching history) — cards + edges 1`] = `
{
  "buttons": 15,
  "inputs": 1,
  "lengthBucket": 38,
  "sha": "fb584442cd99c6c7",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > populated unit tolerates a dangling lessonId without crashing (normalize guard) 1`] = `
{
  "buttons": 17,
  "inputs": 1,
  "lengthBucket": 45,
  "sha": "3d8b769ddc846069",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > units-aware empty (history with unitId + units prop) 1`] = `
{
  "buttons": 10,
  "inputs": 1,
  "lengthBucket": 25,
  "sha": "9556ef4228c0a4d4",
  "svgs": 1,
  "textareas": 0,
}
`;
